--- a/file.css
+++ b/file.css
@@ -1,11 +1,17 @@
 *{
     box-sizing: border-box;
 }
+body{
+    background: url('tech2.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
 .container{
     text-align: center;
     width:35%;
     margin: auto;
-    color: crimson;
+    color: rgb(97, 9, 24);
     min-height: 80vh;
     margin-top: 5%;
 }
@@ -13,27 +19,30 @@
 .todo{
     width:100%;
     padding: 5px;
-    background-color: darkgray;
+    color: white;
+    /* background-color: rgb(241, 248, 248); */
 
 }
 
 h1{
     margin-bottom: 20px;
     margin-top: 0;
+    color: white;
 }
 
 .todo>p{
     font-size: 15px;
-    color: teal;
+    color: white;
+
 }
 
 input{
     border:none;
     background : none;
     outline:none;
-    color: brown;
+    color:beige;
     font-size:20px;
-    padding: 7px;
+    padding: 3px;
 }
 
 .todo-list{
@@ -53,8 +62,8 @@ input{
     justify-content: space-between;
     text-align: justify;
     margin-bottom: 15px;
-    border: 1px solid grey;
-    background-color: deeppink;
+    border: 1px solid black;
+    background-color: rgb(172, 15, 93);
 }
 
 #todo li.completed{
@@ -63,5 +72,5 @@ input{
 }
 #todo li.uncompleted{
     text-decoration: none;
-    background-color: red;
+    background-color: rgb(226, 91, 91);
 }
